fix border not showing

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -73,8 +73,7 @@ input {
     -webkit-box-shadow: none;
     box-shadow: none;
     -webkit-appearance: none;
-    background-color:transparent;
-    border: 0px solid;
+    border: 1px solid #FD495C;
     height:30px;
     width:260px;
 }
